--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,18 @@
             <version>1.1.1</version>
             <!--<scope>provided</scope>-->
         </dependency>
+
+        <!--  1.1.1版本的storm与kafka集成的方式-->
+        <dependency>
+            <groupId>org.apache.storm</groupId>
+            <artifactId>storm-kafka-client</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>0.10.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
